Fix aligned blocks toolbar

--- a/packages/editor/src/components/block-list/style.scss
+++ b/packages/editor/src/components/block-list/style.scss
@@ -900,6 +900,13 @@
 				top: $block-toolbar-height + $block-padding;
 			}
 		}
+
+		// This is an important one. Because the toolbar is sticky, it's part of the flow.
+		// It behaves as relative, in other words, until it reaches an edge and then behaves as fixed.
+		// But by applying a float, we take it out of this flow. The benefit is that we don't need to compensate for margins.
+		// In turn, this allows margins on sibling elements to collapse to parent elements.
+		float: left;
+		width: 100%;
 	}
 
 	.editor-block-list__block[data-align="right"] & {
